--- a/templates/view/home.html
+++ b/templates/view/home.html
@@ -229,9 +229,6 @@
 						{{newpostform.submit}}
 					</form>
 
-				<iframe src="/api/harmony" width="0px" height="0px" frameborder="0" id="encoderFrame">
-				</iframe>
-
 				</div>
 
 				<div class="modal-footer">
@@ -247,11 +244,8 @@
 
 		<div class="well well-lg">
 			<h5>公告</h5>
-			<h6>更新内容：可选的发帖时不展示在时间线上；<br>回复插图时自动在文本框内填充<br>换行成了</h6>
-			<br><!--
-			<h2>上次删库：5月31号早10：30</h2>
-			<h1>由于尚处于开发阶段，如果发现无法登陆，可能是删库了，烦请重新注册</h1>
-			<br>-->
+			<h5>更新内容：对和谐编码的模块进行了迁移（变为全前端，避免多次请求）<br>对非核心功能进行了精简<br>变天了，好冷</h5>
+			<br>
 		</div>
 	</div>
 	<br>
