--- a/templates/view/viewpost.html
+++ b/templates/view/viewpost.html
@@ -6,6 +6,7 @@
 	<title>{{post.title}}</title>
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="/static/css/newnavbar.css" rel="stylesheet">
+    <link type="text/css" href="https://raw.githubusercontent.com/StuGRua/2020_project/main/favicon.ico"rel="stylesheet">
 	<script type="text/javascript" src="/static/js/md5.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
