--- a/templates/view/portal.html
+++ b/templates/view/portal.html
@@ -6,9 +6,9 @@
 	<meta charset="utf-8">
 	<title>错位 丨 Misplace - portal</title>
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/StuGRua/2020_project/main/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/static/css/newnavbar.css" rel="stylesheet">
-    <link type="text/css" href="https://raw.githubusercontent.com/StuGRua/2020_project/main/favicon.ico"rel="stylesheet">
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/static/js/md5.js"></script>
