--- a/templates/view/home.html
+++ b/templates/view/home.html
@@ -6,11 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>错位 丨 Misplace - home</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/static/css/newnavbar.css" rel="stylesheet">
-	<link type="text/css" href="https://raw.githubusercontent.com/StuGRua/2020_project/main/favicon.ico"rel="stylesheet">
+	<link type="text/css" href="/static/css/harmony.css"rel="stylesheet">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/StuGRua/2020_project/main/favicon.ico" type="image/x-icon">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
